Fix: Misaligned main menu

--- a/css/custom.css
+++ b/css/custom.css
@@ -9,3 +9,13 @@
 }
 .contact-map{height:250px;overflow:hidden;padding:0;}
 .map-box{height: 250px;}
+
+/* MENU [[ */
+.menu > li ul {
+	margin-top: 4px;
+}
+
+.menu > li ul li ul {
+	margin-top: -8px;
+}
+/* ]] */
